--- a/css/styles.css
+++ b/css/styles.css
@@ -604,6 +604,11 @@ justify-content: center;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  font-family: inherit;
+  color: var(--primary-text-color)
+}
+a {
+  text-decoration: none;
 }
 .subtitle {
   margin-top: 0px;
@@ -611,6 +616,7 @@ justify-content: center;
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.8;
+  font-family: inherit;
 }
 
 .project-no-gap {
