--- a/css/styles.css
+++ b/css/styles.css
@@ -60,24 +60,23 @@ ul {
 }
 
 /* навігація сайту */
-.envelope {
-  fill: #757575;
 
+.envelope {
   margin-right: 10px;
+  fill: currentColor;
 }
-.envelope:hover,
-.envelope:focus {
-  fill: var(--accent-color);
-}
+
 .vector {
   margin-right: 10px;
 
-  fill: #757575;
+  fill: currentColor;
 }
+
 .vector:hover,
 .vector:focus {
-  fill: var(--accent-color);
+  fill: currentColor;
 }
+
 .site-nav {
   display: flex;
   margin-left: 93px;
@@ -105,7 +104,6 @@ ul {
 {
   color: var(--accent-color);
 }
-
 .site-nav-link:active {
   color: var(--accent-color);
 }
@@ -125,9 +123,11 @@ ul {
   margin-right: 0px;
 }
 .nav-contacts {
-  display: block;
+  display: flex;
   padding-bottom: 32px;
   padding-top: 32px;
+  align-items: center;
+  justify-content: center;
 
   color: var(--secondary-text-color);
   text-decoration: none;
@@ -137,7 +137,9 @@ ul {
 }
 .nav-contacts:hover {
   color: var(--accent-color);
+  fill: var(--accent-color);
 }
+
  /* приховані логічні заголовки */
 .visually-hidden {
   position: absolute;
@@ -154,14 +156,12 @@ ul {
 }
 
 .conteiner {
-  margin-left: auto;
-  margin-right: auto;
-
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
-/* секція списку переваг */
 
 .section {
   padding-top: 94px;
@@ -229,9 +229,11 @@ h1 {
   font-weight: 700;
 }
 .hero-btn:hover, .hero-btn:focus {
-background: var(--accent-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
+background: #188CE8;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
+/* Секція списку переваг */
 
 .benefits-flex { 
   display: flex;
@@ -269,10 +271,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
   display: flex;
   width: 270px;
   height: 120px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-right: 100px;
-  padding-left: 100px;
   background-color: #F5F4FA;
   align-items: center;
   justify-content: center;
@@ -375,12 +373,13 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
   margin-right: 0px;
 }
 .link-twitter, .link-instagram, .link-facebook, .link-linkedin {
-  display: block;
+  display: flex;
   width: 44px;
   height: 44px;
   color: #AFB1B8;
   border-radius: 50%;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 .footer-link-instagram, .footer-link-twitter, .footer-link-facebook, .footer-link-linkedin {
   background-color: rgba(255, 255, 255, 0.1);
@@ -393,33 +392,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 .link-twitter:hover, .link-instagram:hover, .link-facebook:hover, .link-linkedin:hover {
   color: var(--primary-background-color);
 }
-.instagram {
-  fill: currentColor;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 12.04px;
-  margin-right: 11.97px;
-}
-.twitter {
-  fill: currentColor;
-  margin-top: 13.88px;
-  margin-bottom: 13.87px;
-  margin-left: 12px;
-  margin-right: 12px;
-}
-.facebook {
-  fill: currentColor;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 17.16px;
-  margin-right: 16.84px;
-}
-.linkedin {
-  fill: currentColor;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 12px;
-  margin-right: 12px;
+.instagram, .twitter, .facebook, .linkedin { 
+  fill: currentColor; 
 }
 
 .list-position {
@@ -432,6 +406,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 }
 
 /* Наші клієнти */
+
 .client-title{
   margin-top: 0px;
   margin-bottom: 50px;
@@ -449,17 +424,14 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
   align-items: center;
 }
 .link-client-logo {
-  display: block;
+  display: flex;
   width: 170px;
   height: 92px;
-  border: 1px solid #AFB1B8;
+  border: 1px solid currentColor;
   border-radius: 4px;
   justify-content: center;
+  align-items: center;
   color: #AFB1B8;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 16px;
-  padding-bottom: 16px;
 }
 .client {  
   margin-right: 30px;
@@ -470,9 +442,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 .link-client-logo:hover {
   color: var(--accent-color);
 }
-.link-client-logo:hover {
-  border: 1px solid var(--accent-color);
-}
 .client-logo {
 width: 106px;
 height: 60px;
@@ -481,6 +450,9 @@ fill: currentColor;
 
 /* Футер */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  
   max-width: 1600px ;
   height: 252px;
   background-color: var(--secondary-background-color);
@@ -523,17 +495,11 @@ fill: currentColor;
 }
 .footer-flex {
   display: flex;
+  align-items: baseline;
 }
 .footer-flex-item {
-  margin-top: 60px;
-  margin-bottom: 60px;
   margin-right: 70px;
 }
-.footer-flex-item-link {
-  margin-top: 72px;
-  margin-bottom: 100px;
-} 
-
 .footer-title {
   margin: 0px;
   margin-bottom: 20px;
