--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,7 @@ ul {
   max-width: 1600px ;
   height: 600px;
  
+  background-color: #000000;
   background-image: linear-gradient( to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)
@@ -398,7 +399,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 .list-position {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 16px;
 
   color: var(--secondary-text-color);
   font-size: 16px;
